log
Sat 29 Mar 2025 07:55:55 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Sun 30 Mar 2025 02:37:09 AM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:5: error: ‘l’ undeclared (first use in this function)
   35 |     l->tail = NULL;
      |     ^
list.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
25021aa
Sun 30 Mar 2025 02:37:18 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7722083
Sun 30 Mar 2025 02:37:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d0680af
Sun 30 Mar 2025 02:39:38 AM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:31: error: expected ‘;’ before ‘return’
   45 |     list->current = list->head // apunta al primer elem
      |                               ^
      |                               ;
   46 |     return list-current;
      |     ~~~~~~                     
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
029f7e4
Sun 30 Mar 2025 02:39:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:17: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   46 |     return list-current;
      |                 ^~~~~~~
      |                 popCurrent
list.c:46:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
820fa68
Sun 30 Mar 2025 02:40:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7a3d597
